# synthetic_models

./: README.md  pyproject.toml
src/synthetic_models/: one_pop.py  two_subpops.py
